Java and Advanced Java LEarnings Added